// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingInput should render RatingInput checked 1`] = `
Array [
  <input
    checked={true}
    className="form__rating-input visually-hidden"
    id="4-stars"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={4}
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="4-stars"
    title="good"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;

exports[`RatingInput should render RatingInput not checked 1`] = `
Array [
  <input
    checked={false}
    className="form__rating-input visually-hidden"
    id="5-stars"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={5}
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="5-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;
